# SandboxExperiments

./: .bazelrc  .clang-tidy  BUILD.bazel  Instrumenter.cpp  Instrumenter.h  MODULE.bazel  Makefile  README.md  Traces.csv  benchmark_main.cpp  cache_warm.cpp  cache_warm.md  call_once.cpp  log.txt  main.cpp  main_thread_experiment.sh  plot.py  system_call_main.cpp
CAS16_experiments/: .clang-format  .gitignore  Makefile  Plot.py  README.md  RunAll.py  compile_commands.json  hotspot.sh
CAS16_experiments/src/: main.cpp
CAS16_experiments_temp/: Makefile  compile_commands.json  hotspot.sh
CAS16_experiments_temp/src/: main.cpp
alloc_experiments/: AllocTraces.csv  Makefile  Plot.py  README.md  ReadTraces.csv  RunAll.py  RunBench.py  Traces.csv  WriteTraces.csv  interface.cpp  interface.h  main.cpp
alloc_experiments/Plots/: .gitignore  Alloc_All.csv  Alloc_NoExtremes.csv  Alloc_NoJeMalloc.csv  Plot.py  ReadTraces_MPA_7.csv  Read_All.csv  Write_All.csv  Write_Persistence.csv  Write_Volatile.csv
cache_experiments/: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  Instrumenter.cpp  Instrumenter.h  MODULE.bazel  WORKSPACE.bazel  cache_warm.cpp  call_once.cpp  clean_pmem.sh  plot.py  repeat_execution.sh  run.py  system_call_main.cpp  wbinvd.ko
cache_experiments/others/: cmap_vmap_bench.cpp  persist_test.cpp  signals_test.cpp
clock_experiments/: Makefile  main.cpp
others/: cmap_vmap_bench.cpp  prof_test.cpp
pmr_alloc_experiments/: .clang-tidy  .gitignore  Makefile  Plot.py  README.md  RunAll.py  compile_commands.json  hellgrind.sh  hotspot.sh  main.cpp  runperf.sh  test.lua
pmr_alloc_experiments/includes/: config.h
pmr_alloc_experiments/lua_interpreter/: lua
pmr_alloc_experiments/run_scripts/: README.md  format.lua  plot.py  test.lua
pmr_alloc_experiments/src/: main.cpp  pool.c  synch_pool.cpp  synch_pool.h
