COPTS = [
    "-Wall",
    "-Wextra",
    "-pedantic",
    "-pedantic-errors",
]

cc_binary(
    name = "cache_warm",
    srcs = ["cache_warm.cpp"],
    copts = COPTS,
    linkopts = ["-lpmemobj"],
    deps = [
        ":Instrumenter",
        ":system_call_main",
    ],
)

cc_binary(
    name = "system_call_main",
    srcs = ["system_call_main.cpp"],
    copts = COPTS,
    linkopts = ["-lpmemobj"],
    deps = [
        ":Instrumenter",
    ],
)

cc_binary(
    name = "call_once",
    srcs = ["call_once.cpp"],
    copts = COPTS,
    deps = [],
)

cc_library(
    name = "Instrumenter",
    srcs = ["Instrumenter.cpp"],
    hdrs = ["Instrumenter.h"],
    copts = COPTS,
)
